--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -33,7 +33,7 @@
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <script src="https://accounts.google.com/gsi/client"></script>
-  <div id="root"></div>
+  <div id="root" style="height:100%;"></div>
   <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
