--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -17,6 +17,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@500;700;900&display=swap">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700;900&display=swap">
 
   <!--
       Notice the use of %PUBLIC_URL% in the tags above.
@@ -33,7 +34,7 @@
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <script src="https://accounts.google.com/gsi/client"></script>
-  <div id="root" style="height:100%; display: flex; flex-direction: column;"></div>
+  <div id="root" style="height:100%; display: flex; flex-direction: row;"></div>
   <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
