--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,7 +6,10 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Fabra: The Q&A Platform" />
+  <meta name="description" content="Fabra: Self-service product analytics" />
+  <meta property="og:title" content="Fabra" data-rh="true">
+  <meta property="og:description" content="Self-service analytics" data-rh="true">
+  <meta property="og:image" content="%PUBLIC_URL%/favicon.ico" data-rh="true">
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
