--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Fabra: data warehouse integrations" />
+  <meta name="robots" content="noindex">
   <meta property="og:title" content="Fabra" data-rh="true">
   <meta property="og:description" content="Data warehouse integrations" data-rh="true">
   <meta property="og:image" content="/favicon.ico" data-rh="true">
