Add free trial banner for new organizations

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -23,7 +23,7 @@
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <script src="https://accounts.google.com/gsi/client"></script>
-  <div id="root" style="height:100%; display: flex; flex-direction: row;"></div>
+  <div id="root" style="height:100%; width: 100%; display: flex; flex-direction: column;"></div>
   <script type="module" src="/src/index.tsx"></script>
 </body>
 
