--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,24 +5,24 @@
   <meta charset="utf-8" />
   <link rel="icon" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Fabra" />
+  <meta name="theme-color" content="#ffffff" />
+  <meta name="description" content="Coaster: Curated adventures" />
   <meta name="robots" content="noindex">
-  <meta property="og:title" content="Fabra" data-rh="true">
-  <meta property="og:description" content="Find an experience" data-rh="true">
+  <meta property="og:title" content="Coaster: Curated adventures" data-rh="true">
+  <meta property="og:description" content="Curated adventures" data-rh="true">
   <meta property="og:image" content="/favicon.ico" data-rh="true">
   <link rel="apple-touch-icon" href="/logo192.png" />
   <link rel="manifest" href="/manifest.json" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700;900&display=swap">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700;900&display=swap">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lateef:wght@800&display=swap">
 
   <script>
     (function () { var w = window; var ic = w.Intercom; if (typeof ic === "function") { ic('reattach_activator'); ic('update', w.intercomSettings); } else { var d = document; var i = function () { i.c(arguments); }; i.q = []; i.c = function (args) { i.q.push(args); }; w.Intercom = i; var l = function () { var s = d.createElement('script'); s.type = 'text/javascript'; s.async = true; s.src = 'https://widget.intercom.io/widget/pdc06iv8'; var x = d.getElementsByTagName('script')[0]; x.parentNode.insertBefore(s, x); }; if (document.readyState === 'complete') { l(); } else if (w.attachEvent) { w.attachEvent('onload', l); } else { w.addEventListener('load', l, false); } } })();
   </script>
 
-  <title>Coaster</title>
+  <title>Coaster | Curated adventures</title>
 </head>
 
 <body>
