--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,9 +6,9 @@
   <link rel="icon" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#ffffff" />
-  <meta name="description" content="Coaster: Curated adventures" />
+  <meta name="description" content="Coaster - Curated adventures" />
   <meta name="robots" content="noindex">
-  <meta property="og:title" content="Coaster: Curated adventures" data-rh="true">
+  <meta property="og:title" content="Coaster" data-rh="true">
   <meta property="og:description" content="Curated adventures" data-rh="true">
   <meta property="og:image" content="/favicon.ico" data-rh="true">
   <link rel="apple-touch-icon" href="/logo192.png" />
@@ -22,7 +22,7 @@
     (function () { var w = window; var ic = w.Intercom; if (typeof ic === "function") { ic('reattach_activator'); ic('update', w.intercomSettings); } else { var d = document; var i = function () { i.c(arguments); }; i.q = []; i.c = function (args) { i.q.push(args); }; w.Intercom = i; var l = function () { var s = d.createElement('script'); s.type = 'text/javascript'; s.async = true; s.src = 'https://widget.intercom.io/widget/pdc06iv8'; var x = d.getElementsByTagName('script')[0]; x.parentNode.insertBefore(s, x); }; if (document.readyState === 'complete') { l(); } else if (w.attachEvent) { w.attachEvent('onload', l); } else { w.addEventListener('load', l, false); } } })();
   </script>
 
-  <title>Coaster | Curated adventures</title>
+  <title>Coaster - Curated adventures</title>
 </head>
 
 <body>
