Fix notch color

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,10 +4,12 @@
 <head>
   <meta charset="utf-8" />
   <link rel="icon" href="/favicon.ico" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#ffffff" />
   <meta name="description" content="Coaster - Curated adventures" />
   <meta name="robots" content="noindex">
+  <meta name="apple-mobile-web-app-capable" content="yes"/>
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"/>
   <meta property="og:title" content="Coaster" data-rh="true">
   <meta property="og:description" content="Curated adventures" data-rh="true">
   <meta property="og:image" content="/favicon.ico" data-rh="true">
