--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,13 +15,13 @@
   <link rel="manifest" href="/manifest.json" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;700;900&display=swap">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lateef:wght@400;800&display=swap">
+  <link as="font" rel="preload" href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;700;900&display=swap">
+  <link as="font" rel="preload" href="https://fonts.googleapis.com/css2?family=Lateef:wght@400;800&display=swap">
 
   <title>Coaster - Curated adventures</title>
 </head>
 
-<body>
+<body style="background-color: #a9bde9">
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root" style="height:100%; width: 100%; display: flex; flex-direction: column;"></div>
   <script type="module" src="/src/index.tsx"></script>
