--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,7 +16,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;700;900&display=swap">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lateef:wght@400;800&display=swap">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lateef:wght@400;800&display=block">
 
   <title>Coaster - Curated adventures</title>
 </head>
