--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <link rel="icon" href="/favicon.ico" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1 maximum-scale=1" />
   <meta name="theme-color" content="#001827" />
   <meta name="description" content="Coaster - Curated adventures" />
   <meta property="og:title" content="Coaster" data-rh="true">
