Set availability type for listing

--- a/frontend/src/supplier/index.html
+++ b/frontend/src/supplier/index.html
@@ -23,7 +23,7 @@
 <body style="background-color: #ace0fe">
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root" style="height:100%; width: 100%; display: flex; flex-direction: column;"></div>
-  <script type="module" src="index.tsx"></script>
+  <script type="module" src="/index.tsx"></script>
 </body>
 
 </html>
