Remove background color

--- a/frontend/src/supplier/index.html
+++ b/frontend/src/supplier/index.html
@@ -20,7 +20,7 @@
   <title>Coaster - Curated adventures</title>
 </head>
 
-<body style="background-color: #ace0fe">
+<body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root" style="height:100%; width: 100%; display: flex; flex-direction: column;"></div>
   <script type="module" src="/index.tsx"></script>
